tests/pass/0139_array_scope_shadowing.ee
fn main() {
    let values = [1];
    {
        let values = [2];
        values[0] = 3;
        println(values[0]);
    }
    println(values[0]);
}
