tests/fail/0087_array_write_non_array.ee
fn main() {
    let value = 1;
    value[0] = 2;
}
